Installation procedure using findlib.

--- a/Makefile.conf
+++ b/Makefile.conf
@@ -6,3 +6,5 @@ FORTRAN_FLAGS = -fPIC
 
 VERSION = $(shell grep @version $(ROOT)/src/odepack.mli \
 	  | sed -e "s/ *@version *//")
+
+PKG_NAME =  odepack
