Use gfortran to comple the ODEPACK files.

--- a/Makefile.conf
+++ b/Makefile.conf
@@ -1,8 +1,8 @@
 
 OBJ = .o
 # Fortran compiler:
-FORTRAN = gcc
-FORTRAN_FLAGS = -fPIC
+FORTRAN = gfortran -std=legacy
+FORTRAN_FLAGS = -fPIC #-O3
 
 VERSION = $(shell grep @version $(ROOT)/src/odepack.mli \
 	  | sed -e "s/ *@version *//")
