--- a/tests/Makefile
+++ b/tests/Makefile
@@ -7,7 +7,8 @@ SOURCES = $(wildcard *.ml)
 
 .PHONY: all byte native
 all: byte native
-native: $(SOURCES:.ml=.com)
+byte: $(SOURCES:.ml=.exe)
+native: $(SOURCES:.ml=.com) pendulum
 
 $(SOURCES:.ml=.com) $(SOURCES:.ml=.cmx): $(ROOT)/src/odepack.cmxa
 $(SOURCES:.ml=.exe) $(SOURCES:.ml=.cmo): $(ROOT)/src/odepack.cma
