One has to use Callback.register to pass functions (passing them as arguments does not prevent the garbage collector from moving them around even though they are "protected" by CAMLparam macros).

--- a/src/Makefile
+++ b/src/Makefile
@@ -4,6 +4,8 @@ STUBS_LIB = odepack_stubs
 DOCDIR = $(ROOT)/doc
 WEB = shell.forge.ocamlcore.org:/home/groups/odepack/htdocs
 
+#OCAMLOPT_FLAGS += -g
+
 INSTALL_FILES = META odepack.mli odepack.cmi odepack.cma \
 	odepack.cmxa odepack.a odepack.cmx \
 	$(wildcard dll$(STUBS_LIB).* lib$(STUBS_LIB).*)
