--- a/Makefile.conf
+++ b/Makefile.conf
@@ -8,3 +8,4 @@ VERSION = $(shell grep @version $(ROOT)/src/odepack.mli \
 	  | sed -e "s/ *@version *//")
 
 PKG_NAME =  odepack
+TARBALL = $(PKG_NAME)-$(VERSION).tar.gz
