--- a/.bzrignore
+++ b/.bzrignore
@@ -1,3 +1,4 @@
+#							-*-conf-unix-*-
 *.cm[ioax]
 *.cmxa
 *.annot
@@ -8,3 +9,15 @@ META
 doc/*.html
 doc/*.css
 tests/pendulum
+# _oasis & ocamlbuild
+_build
+_tags
+setup.*
+*.clib
+*.mllib
+*.txt
+*.odocl
+*.byte
+*.native
+*.bak
+src/fortran/
