--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,5 @@
 language: c
 sudo: false
-os:
-  - linux
-  - osx
 addons:
   apt:
     sources:
@@ -13,11 +10,19 @@ addons:
     - opam
 
 script: bash -ex .travis-ci.sh
-env:
-  - OPAM_SWITCH=3.12
-  - OPAM_SWITCH=4.01
-  - OPAM_SWITCH=4.02
-  - OPAM_SWITCH=4.03
+
+matrix:
+  include:
+  - os: linux
+    env: OPAM_SWITCH=3.12.1
+  - os: linux
+    env: OPAM_SWITCH=4.01.0
+  - os: linux
+    env: OPAM_SWITCH=4.02.3
+  - os: linux
+    env: OPAM_SWITCH=4.03.0
+  - os: osx
+    osx_image: xcode7.3
 
 cache:
   directories:
