--- a/odepack.opam
+++ b/odepack.opam
@@ -1,6 +1,4 @@
 opam-version: "2.0"
-name: "odepack"
-version: "0.6.8"
 maintainer: "Christophe Troestler <Christophe.Troestler@umons.ac.be>"
 authors: [ "Christophe Troestler <Christophe.Troestler@umons.ac.be>" ]
 license: "LGPL-3.0 with OCaml linking exception"
@@ -9,25 +7,18 @@ dev-repo: "git+https://github.com/Chris00/ocaml-odepack.git"
 bug-reports: "https://github.com/Chris00/ocaml-odepack/issues"
 tags: [ "ODE" "scientific-computing"  ]
 build: [
-  ["oasis" "setup"]
-  ["ocaml" "setup.ml" "-configure" "--prefix" prefix
-   "--enable-tests" {with-test} ]
-  ["ocaml" "setup.ml" "-build"]
-  ["ocaml" "setup.ml" "-test"] {with-test}
-  ["ocaml" "setup.ml" "-doc"] {with-doc}
+  ["dune" "subst"] {pinned}
+  ["dune" "build" "-p" name "-j" jobs]
+  ["dune" "build" "@doc"] {with-doc}
 ]
-install: ["ocaml" "setup.ml" "-install"]
-remove: [
-  ["ocamlfind" "remove" "odepack"]
+run-test: [
+  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
 ]
 depends: [
-  "ocaml" {>= "3.12.1"}
+  "ocaml" {>= "4.02"}
   "base-bigarray"
-  "oasis" {build & >= "0.4.7"}
-  "ocamlbuild" {build}
-  "ocamlfind" {build}
+  "dune" {build}
 ]
-flags: light-uninstall
 depexts: [
   ["gfortran"] {os-distribution = "debian"}
   ["gfortran"] {os-distribution = "ubuntu"}
