--- a/config/dune
+++ b/config/dune
@@ -2,3 +2,8 @@
  (name        discover)
  (modules     discover)
  (libraries   dune.configurator))
+
+(executable
+ (name      rename_c_prims)
+ (modules   rename_c_prims)
+ (libraries str))
