--- a/odepack.opam
+++ b/odepack.opam
@@ -18,6 +18,7 @@ depends: [
   "ocaml" {>= "4.02"}
   "base-bigarray"
   "dune" {build}
+  "base-bytes" {build}
 ]
 depexts: [
   ["gfortran"] {os-distribution = "debian"}
