--- a/odepack.opam
+++ b/odepack.opam
@@ -5,6 +5,7 @@ license: "LGPL-3.0 with OCaml linking exception"
 homepage: "https://github.com/Chris00/ocaml-odepack"
 dev-repo: "git+https://github.com/Chris00/ocaml-odepack.git"
 bug-reports: "https://github.com/Chris00/ocaml-odepack/issues"
+doc: "https://chris00.github.io/ocaml-odepack/doc/"
 tags: [ "ODE" "scientific-computing"  ]
 build: [
   ["dune" "subst"] {pinned}
