--- a/config/dune
+++ b/config/dune
@@ -1,7 +1,7 @@
 (executable
  (name        discover)
  (modules     discover)
- (libraries   dune.configurator))
+ (libraries   dune-configurator))
 
 (executable
  (name      rename_c_prims)
